<resources>
    <string name="common_cd_download_cat">Download this cat image</string>
    <string name="common_cd_favorite_cat">Add or remove this cat from favorites</string>
    <string name="common_action_retry">Retry</string>
    <string name="common_cat_image_failed">Couldn't load this cat</string>
    <string name="common_cd_retry_cat_image">Retry loading this cat image</string>
    <string name="common_cd_pull_to_refresh">Pull to refresh</string>
    <string name="common_cd_refreshing">Refreshing</string>
    <string name="common_cd_refresh_succeeded">Refreshed</string>
    <string name="common_cd_refresh_failed">Refresh failed</string>
</resources>
